# alphazero_cpp

./: CMakeLists.txt  README.md  main  main.cpp
chess/: CMakeLists.txt  bitboard.cc  board.cc  board.h  position.cc  position.h
chess/utils/: CMakeLists.txt  logging.cc  logging.h
